--- a/index.html
+++ b/index.html
@@ -189,7 +189,7 @@ li a:hover {text-decoration: none; background: inherit url(select.gif) no-repeat
           <name>Liyi Zhang</name>
         </p>
         <p>
-        <img src="liyi-zhang-ehsmeet.JPD" width="30%">
+        <img src="liyi-zhang-ehsmeet.JPG" width="30%">
         </p>
           <p>
           <a href="Zhang_Liyi_Resume.pdf">Resume</a> &nbsp/&nbsp
@@ -204,14 +204,14 @@ li a:hover {text-decoration: none; background: inherit url(select.gif) no-repeat
         <tr>
         <td width="100%" valign="middle">
         <p>
-        I am undergraduate in Columbia University, Columbia College, expecting to graduate in Spring 2021. I'm majoring in Statistics and Applied Math. My research interest lies in the general area of probabilistic Machine Learning. My past and current interests include approximate Bayesian inference, model checking and combination in the Bayesian workflow, and probabilistic perspectives on Deep Learning.
+        I am undergraduate in Columbia University, Columbia College, expecting to graduate in Spring 2021. I'm majoring in Statistics and Applied Mathematics. My research interest lies in the general area of probabilistic Machine Learning. My past and current interests include approximate Bayesian inference, model checking and combination in the Bayesian workflow, and probabilistic perspectives on Deep Learning.
         </p>
         <p> &nbsp </p>
         <p>
         I usually follow the framework of Box's Loop described in detail in <a href="http://www.cs.columbia.edu/~blei/papers/Blei2014b.pdf">Blei (2014)</a>. The graph below that outlines Box's Loop comes from the same article.
         </p>
         <p>
-        <img src="Bayesian-workflow.png" width="100%">
+        <img src="Images/Bayesian-workflow.png" width="100%">
         </p>
         </td> 
         </tr>
