--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-<title>Antonio's Page</title>
+
 <style type = "text/css"> 
 tab1 {padding-left: 12.5em; }
 tab2 {padding-left: 37em; }
@@ -84,7 +84,6 @@ width:80px;
 }
 </style>
 
-  <link rel="icon" type="image/png" href="seal_icon.png">
 
   <title>Liyi Zhang </title>
   <meta http-equiv="Content-Type" content="text/html; charset=us-ascii">
@@ -144,7 +143,7 @@ width:80px;
 
     <tr>
       <td width="25%">
-        <img src='Images/vcsmc-loglik' width="280" height="250">
+        <img src='Images/vcsmc-loglik.png' width="280" height="250">
       </td>
       <td valign="top" width="75%">
         <p>
