--- a/index.html
+++ b/index.html
@@ -52,14 +52,18 @@ blockquote {
     margin-right: 80px;
 }
 
-
-
 table {
     border-style: hidden;
 }
 
 li{
   margin: 10px 0;
+}
+
+name {
+    font-family:  "PT Serif","Georgia","Helvetica Neue",Arial,sans-serif; 
+    font-size: 35px;
+    font-weight: bold;
 }
 
 #friendly_1 {
@@ -101,7 +105,7 @@ width:80px;
           <name>Liyi Zhang</name>
         </p>
         <p>
-        <img src="liyi-zhang-ehsmeet.JPG" width="30%">
+        <img src="zhang-liyi.jpg" width="30%">
         </p>
         <p> &nbsp </p>
         <p>
