--- a/index.html
+++ b/index.html
@@ -66,6 +66,12 @@ name {
     font-weight: bold;
 }
 
+heading {
+    font-family:  "PT Serif","Georgia","Helvetica Neue",Arial,sans-serif; 
+    font-size: 15px;
+    font-weight: bold;
+}
+
 #friendly_1 {
 position:absolute;
 left:190px;
@@ -120,6 +126,7 @@ width:80px;
         <table width="100%" align="center" border="0" cellspacing="0" cellpadding="20">
         <tr>
         <td width="100%" valign="middle">
+        <p> &nbsp </p>
         <p>
         I am undergraduate in Columbia University, Columbia College, expecting to graduate in Spring 2021. I'm majoring in Statistics and Applied Mathematics. My research interest lies in the general area of probabilistic Machine Learning. My past and current interests include approximate Bayesian inference, model checking and combination in the Bayesian workflow, and probabilistic perspectives on Deep Learning.
         </p>
