--- a/index.html
+++ b/index.html
@@ -4,34 +4,23 @@
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
 
-<style type = "text/css"> 
-tab1 {padding-left: 12.5em; }
-tab2 {padding-left: 37em; }
-* {
-     /*font-family: sans-serif;*/
-    }
-</style>
 <style type="text/css">
 * {
-margin:0;
-padding:0;
+  margin: 5 px;
+  padding: 0;
 }
 html {
-overflow-y:scroll; /*keep scrollbar position present in FF at all times*/
-height: 100%;
-background-color: ;/* #white;*/
-background-image: ; /* url("fib.jpg") #ffc38b;*/
-
+  overflow-y:scroll; /*keep scrollbar position present in FF at all times*/
+  height: 100%;
+  background-color: ;/* #white;*/
+  background-image: ; /* url("fib.jpg") #ffc38b;*/
 }
-
 a {
   color: #638;
 }
-
 a:visited {
   color: #638;
 }
-
 /*------------center the website---------------------*/
 #wrap {
 position:relative;
@@ -43,7 +32,6 @@ margin:0 auto;
 border:0px solid; /* border:1px solid; */
 border-color:#f00 #000 #000 #000;
 }
-
 blockquote {
     display: block;
     margin-top: 1em;
@@ -51,27 +39,22 @@ blockquote {
     margin-left: 80px;
     margin-right: 80px;
 }
-
 table {
     border-style: hidden;
 }
-
 li{
   margin: 10px 0;
 }
-
 name {
     font-family:  "PT Serif","Georgia","Helvetica Neue",Arial,sans-serif; 
     font-size: 35px;
     font-weight: bold;
 }
-
 heading {
     font-family:  "PT Serif","Georgia","Helvetica Neue",Arial,sans-serif; 
     font-size: 15px;
     font-weight: bold;
 }
-
 #friendly_1 {
 position:absolute;
 left:190px;
@@ -135,8 +118,9 @@ width:80px;
         For a framework of analysis, I usually follow the Box's Loop described in detail in <a href="http://www.cs.columbia.edu/~blei/papers/Blei2014b.pdf">Blei (2014)</a>. The graph below outlines the Box's Loop (comes from the same article).
         </p>
         <p>
-        <img src="Images/Bayesian-workflow.png" width="100%">
+        <img src="Images/Bayesian-workflow.png" width="75%">
         </p>
+        <p> &nbsp </p>
         </td> 
         </tr>
       </table>
