--- a/index.html
+++ b/index.html
@@ -21,16 +21,8 @@ a {
 a:visited {
   color: #638;
 }
-/*------------center the website---------------------*/
-#wrap {
-position:relative;
-background: #white;
-width:1025px;
-height:115%;
-min-height:100%;
-margin:0 auto;
-border:0px solid; /* border:1px solid; */
-border-color:#f00 #000 #000 #000;
+p {
+  font-family: 'Titillium Web', Verdana, Helvetica, sans-serif;
 }
 blockquote {
     display: block;
@@ -46,12 +38,12 @@ li{
   margin: 10px 0;
 }
 name {
-    font-family:  "PT Serif","Georgia","Helvetica Neue",Arial,sans-serif; 
+    font-family:  'Titillium Web', Verdana, Helvetica, sans-serif;
     font-size: 35px;
     font-weight: bold;
 }
 heading {
-    font-family:  "PT Serif","Georgia","Helvetica Neue",Arial,sans-serif; 
+    font-family:  'Titillium Web', Verdana, Helvetica, sans-serif;
     font-size: 15px;
     font-weight: bold;
 }
@@ -113,7 +105,6 @@ width:80px;
         <p>
         I am undergraduate in Columbia University, Columbia College, expecting to graduate in Spring 2021. I'm majoring in Statistics and Applied Mathematics. My research interest lies in the general area of probabilistic Machine Learning. My past and current interests include approximate Bayesian inference, model checking and combination in the Bayesian workflow, and probabilistic perspectives on Deep Learning.
         </p>
-        <p> &nbsp </p>
         <p>
         For a framework of analysis, I usually follow the Box's Loop described in detail in <a href="http://www.cs.columbia.edu/~blei/papers/Blei2014b.pdf">Blei (2014)</a>. The graph below outlines the Box's Loop (comes from the same article).
         </p>
