--- a/index.html
+++ b/index.html
@@ -38,13 +38,13 @@ li{
   margin: 10px 0;
 }
 name {
-    font-family:  'Titillium Web', Verdana, Helvetica, sans-serif;
+    font-family:  "PT Serif","Georgia","Helvetica Neue",Arial,sans-serif; 
     font-size: 35px;
     font-weight: bold;
 }
 heading {
     font-family:  'Titillium Web', Verdana, Helvetica, sans-serif;
-    font-size: 15px;
+    font-size: 21px;
     font-weight: bold;
 }
 #friendly_1 {
@@ -88,7 +88,6 @@ width:80px;
         <p>
         <img src="zhang-liyi.jpg" width="30%">
         </p>
-        <p> &nbsp </p>
         <p>
           <a href="Zhang_Liyi_Resume.pdf">Resume</a> &nbsp/&nbsp
           <a href="https://www.linkedin.com/in/liyi-zhang-1b5041139/"> LinkedIn </a> &nbsp/&nbsp
@@ -101,7 +100,6 @@ width:80px;
         <table width="100%" align="center" border="0" cellspacing="0" cellpadding="20">
         <tr>
         <td width="100%" valign="middle">
-        <p> &nbsp </p>
         <p>
         I am undergraduate in Columbia University, Columbia College, expecting to graduate in Spring 2021. I'm majoring in Statistics and Applied Mathematics. My research interest lies in the general area of probabilistic Machine Learning. My past and current interests include approximate Bayesian inference, model checking and combination in the Bayesian workflow, and probabilistic perspectives on Deep Learning.
         </p>
@@ -133,16 +131,15 @@ width:80px;
       </td>
       <td valign="top" width="75%">
         <p>
-    <a href="Writings/VCSMC-MLCB.pdf">
+        <a href="Writings/VCSMC-MLCB.pdf">
             <papertitle>Variational Combinatorial Sequential Monte Carlo in Bayesian Phylogenetic Inference</papertitle>
-    </a>
-    <br>
+        </a>
+        <br>
           <a href=http://www.cs.columbia.edu/~amoretti/>Antonio K. Moretti</a>,
           <strong>Liyi Zhang</strong>,
           <a href="http://www.cs.columbia.edu/~itsik/">Itsik Pe'er</a>,
-    <br>
+        <br>
         <em>Machine Learning in Computational Biology 2020 (MLCB). Oral Presentation. </em>  <br>
-        
         </p>
         <p>Bayesian phylogenetic inference is often conducted via local or sequential search algorithms such as random-walk Markov chain Monte Carlo or Combinatorial Sequential Monte Carlo. These methods sample tree topologies and branch lengths, however when MCMC is used to perform evolutionary parameter learning, convergence often requires long runs with inefficient state space exploration. We introduce Variational Combinatorial Sequential Monte Carlo (VCSMC), a novel Variational Inference method that simultaneously performs both parameter inference and model learning. Our method uses sequential search to construct a variational objective defined on the composite space of phylogenetic trees. We show that VCSMC is computationally efficient and explores higher probability spaces when compared with state-of-the-art Hamiltonian Monte Carlo methods. </p>
       </td>
