--- a/index.html
+++ b/index.html
@@ -158,13 +158,14 @@ width:80px;
     <table width="100%" align="center" border="0" cellspacing="0" cellpadding="25">
     <tr>
       <td width="25%">
-        <img src='Images/ternary_weights_random_topo3.png' width="280" height="250">
+        <img src='Images/stack-ternary.png' width="280" height="250">
       </td>
       <td valign="top" width="75%">
         <p>
         <a href="Writings/stack-phylo.pdf">
             <papertitle>Model Stacking in Bayesian Phylogenetic Inference</papertitle>
         </a>
+        <br>
         <em>Columbia Statistics - Undergraduate Internship. Work in Progress. </em>  <br>
         </p>
         <p>I'm working with Professor Andrew Gelman to develop MCMC method in R and Stan to enable sampling in discrete spaces in phylogenetic models by isolating discrete models and using stacking of predictive distributions for model combination. Here, I'm still in the process of diagnosing MCMC inference and exploring properties of stacking as a method of model averaging.</p>
@@ -180,8 +181,9 @@ width:80px;
       <td valign="top" width="75%">
         <p>
         <a href="Writings/SVRG_report.pdf">
-            <papertitle>Model Stacking in Bayesian Phylogenetic Inference</papertitle>
+            <papertitle>Stochastic Variance Reduction for Nonconvex Optimization</papertitle>
         </a>
+        <br>
         <em>COMS 4995 Optimization Methods in Machine Learning - Class Group Project </em>  <br>
         </p>
         <p>Stochastic Variance Reduced Gradient (SVRG) is one of the popular method proposed to reduce the variance of gradient in the optimization. In this project, we evaluate its result on nonconvex optimization. We study the method without the convex assumption and try to reproduce previous experiment results to verify their claims. However, we can only partially reproduce their result and the advantage against SGD no longer holds when we use deeper network.</p>
