--- a/index.html
+++ b/index.html
@@ -126,7 +126,7 @@ width:80px;
     <table width="100%" align="center" border="0" cellspacing="0" cellpadding="25">
     <tr>
       <td width="25%">
-        <img src='Images/vcsmc-loglik.png' width="320" height="250">
+        <img src='Images/vcsmc-loglik.png' width="280" height="230">
       </td>
       <td valign="top" width="75%">
         <p>
@@ -187,6 +187,42 @@ width:80px;
         <em>COMS 4995 Optimization Methods in Machine Learning - Class Group Project </em>  <br>
         </p>
         <p>Stochastic Variance Reduced Gradient (SVRG) is one of the popular method proposed to reduce the variance of gradient in the optimization. In this project, we evaluate its result on nonconvex optimization. We study the method without the convex assumption and try to reproduce previous experiment results to verify their claims. However, we can only partially reproduce their result and the advantage against SGD no longer holds when we use deeper network.</p>
+      </td>
+    </tr>
+    </table>
+
+    <table width="100%" align="center" border="0" cellspacing="0" cellpadding="25">
+    <tr>
+      <td width="25%">
+        <img src='Images/topics.png' width="280" height="250">
+      </td>
+      <td valign="top" width="75%">
+        <p>
+        <a href="Writings/gibss_sampler.pdf">
+            <papertitle>Text Clustering with the Gibbs Sampler</papertitle>
+        </a>
+        <br>
+        <em>STCS 6701 Foundations of Graphical Models - Individual Group Project </em>  <br>
+        </p>
+        <p>I did a from-scratch implementation of a Gibbs Sampler with its code linked, and explored its properties. It clusters text data using 2000+ articles from the AP dataset with the Poisson mixture model, generating meaningful topics using TFIDF-inspired term-score.</p>
+      </td>
+    </tr>
+    </table>
+
+    <table width="100%" align="center" border="0" cellspacing="0" cellpadding="25">
+    <tr>
+      <td width="25%">
+        <img src='Images/pso.png' width="280" height="250">
+      </td>
+      <td valign="top" width="75%">
+        <p>
+        <a href="Writings/PSO.pdf">
+            <papertitle>Effectiveness and Robustness of Networks in Particle Swarm Optimization</papertitle>
+        </a>
+        <br>
+        <em>Complex Resilient Intelligent Systems Lab - Undergraduate Research Project </em>  <br>
+        </p>
+        <p>Particle swarm optimization (PSO) is a nature-inspired computational method, in which a swarm of particles work together to practical problems, with each trying to improve his individual solution through the interaction with his neighbors. PSO has been successfully applied in a wide range of practical problems aiming to searching the global optimization and convergence. However, PSO suffers from a phenomenon known as premature convergence, in which all particles converge to a local optimum, and cannot improve their solution any further. We seek to investigate how network topologies influence its performance. Furthermore, we explore the robustness of these network topologies by incorporating the removal rate of the particles: with a given possibility, particles are getting removed from the game after a fixed number of iterations. In that case, even if some topologies have the same connectivity, they could yield quite different performances. We show by analysis and simulations the optimization game on several different functions, and finally draw conclusions about how these factors’ influence of the efficacy and potential of PSO, as well as provide ideas for further exploration in this area of study.</p>
       </td>
     </tr>
     </table>
