--- a/index.html
+++ b/index.html
@@ -16,10 +16,16 @@ html {
   background-image: ; /* url("fib.jpg") #ffc38b;*/
 }
 a {
-  color: #638;
+  color: #073766;
+  font-size: 18px;
 }
 a:visited {
-  color: #638;
+  color: #073766;
+  font-size: 18px;
+}
+a:hover {
+  color: #ECCF11;
+  font-size: 18px;
 }
 p {
   font-family: 'Titillium Web', Verdana, Helvetica, sans-serif;
@@ -47,6 +53,11 @@ heading {
     font-size: 21px;
     font-weight: bold;
 }
+papertitle {
+    font-family:  'Titillium Web', Verdana, Helvetica, sans-serif;
+    font-size: 18px;
+    font-weight: bold;
+    }
 #friendly_1 {
 position:absolute;
 left:190px;
@@ -184,7 +195,7 @@ width:80px;
             <papertitle>Stochastic Variance Reduction for Nonconvex Optimization</papertitle>
         </a>
         <br>
-        <em>COMS 4995 Optimization Methods in Machine Learning - Class Group Project </em>  <br>
+        <em>COMS 4995 Optimization Methods in Machine Learning - In-Class Group Project </em>  <br>
         </p>
         <p>Stochastic Variance Reduced Gradient (SVRG) is one of the popular method proposed to reduce the variance of gradient in the optimization. In this project, we evaluate its result on nonconvex optimization. We study the method without the convex assumption and try to reproduce previous experiment results to verify their claims. However, we can only partially reproduce their result and the advantage against SGD no longer holds when we use deeper network.</p>
       </td>
@@ -198,11 +209,11 @@ width:80px;
       </td>
       <td valign="top" width="75%">
         <p>
-        <a href="Writings/gibss_sampler.pdf">
+        <a href="Writings/gibbs_sampler.pdf">
             <papertitle>Text Clustering with the Gibbs Sampler</papertitle>
         </a>
         <br>
-        <em>STCS 6701 Foundations of Graphical Models - Individual Group Project </em>  <br>
+        <em>STCS 6701 Foundations of Graphical Models - In-Class Individual Assignment </em>  <br>
         </p>
         <p>I did a from-scratch implementation of a Gibbs Sampler with its code linked, and explored its properties. It clusters text data using 2000+ articles from the AP dataset with the Poisson mixture model, generating meaningful topics using TFIDF-inspired term-score.</p>
       </td>
