--- a/index.html
+++ b/index.html
@@ -16,19 +16,16 @@ html {
   background-image: ; /* url("fib.jpg") #ffc38b;*/
 }
 a {
-  color: #073766;
-  font-size: 18px;
+  color: #240FDF;
 }
 a:visited {
-  color: #073766;
-  font-size: 18px;
+  color: #240FDF;
 }
 a:hover {
   color: #ECCF11;
-  font-size: 18px;
 }
 p {
-  font-family: 'Titillium Web', Verdana, Helvetica, sans-serif;
+  font-family: "Trebuchet MS", Verdana, Helvetica, sans-serif;
 }
 blockquote {
     display: block;
@@ -49,12 +46,12 @@ name {
     font-weight: bold;
 }
 heading {
-    font-family:  'Titillium Web', Verdana, Helvetica, sans-serif;
+    font-family:  "Trebuchet MS", Verdana, Helvetica, sans-serif;
     font-size: 21px;
     font-weight: bold;
 }
 papertitle {
-    font-family:  'Titillium Web', Verdana, Helvetica, sans-serif;
+    font-family:  "Trebuchet MS", Verdana, Helvetica, sans-serif;
     font-size: 18px;
     font-weight: bold;
     }
@@ -233,7 +230,7 @@ width:80px;
         <br>
         <em>Complex Resilient Intelligent Systems Lab - Undergraduate Research Project </em>  <br>
         </p>
-        <p>Particle swarm optimization (PSO) is a nature-inspired computational method, in which a swarm of particles work together to practical problems, with each trying to improve his individual solution through the interaction with his neighbors. PSO has been successfully applied in a wide range of practical problems aiming to searching the global optimization and convergence. However, PSO suffers from a phenomenon known as premature convergence, in which all particles converge to a local optimum, and cannot improve their solution any further. We seek to investigate how network topologies influence its performance. Furthermore, we explore the robustness of these network topologies by incorporating the removal rate of the particles: with a given possibility, particles are getting removed from the game after a fixed number of iterations. In that case, even if some topologies have the same connectivity, they could yield quite different performances. We show by analysis and simulations the optimization game on several different functions, and finally draw conclusions about how these factors’ influence of the efficacy and potential of PSO, as well as provide ideas for further exploration in this area of study.</p>
+        <p>Particle swarm optimization (PSO) is a nature-inspired computational method, in which a swarm of particles solves a problem, and each particle improves its individual solution through interaction with its neighbors. PSO has been successfully applied in a range of practical problems aiming at searching for the global optimization. However, PSO often suffers from premature convergence to local optima. We seek to investigate how network topologies influence its performance. Furthermore, we explore the robustness of these network topologies by incorporating the removal rate of the particles: with a given possibility, particles are getting removed from the game after a fixed number of iterations. In that case, even if some topologies have the same connectivity, they yield different performances. We show the optimization game on several different functions and discuss these factors’ influence on the efficacy and potential of PSO, as well as ideas for further exploration in this area of study.</p>
       </td>
     </tr>
     </table>
