--- a/index.html
+++ b/index.html
@@ -212,7 +212,7 @@ width:80px;
         <br>
         <em>STCS 6701 Foundations of Graphical Models - In-Class Individual Assignment</em>  <br>
         </p>
-        <p>I did a from-scratch implementation of a Gibbs Sampler with its <a href="https://github.com/zhang-liyi/gibbs-sampler"> code linked</a>, and explored its properties. It clusters text data using 2000+ articles from the AP dataset with the Poisson mixture model, generating meaningful topics using TFIDF-inspired term-score.</p>
+        <p>I did a from-scratch implementation of a Gibbs Sampler with its <a href="https://github.com/zhang-liyi/gibbs-sampler/blob/master/gibbs_sampler.R"> code linked</a>, and explored its properties. It clusters text data using 2000+ articles from the AP dataset with the Poisson mixture model, generating meaningful topics using TFIDF-inspired term-score.</p>
       </td>
     </tr>
     </table>
