--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@ width:80px;
         I'm doing undergraduate degree at Columbia University, Columbia College, expecting to graduate in Spring 2021. I'm majoring in Statistics and Applied Mathematics. My research interest lies in the general area of probabilistic Machine Learning. They include approximate Bayesian inference, model checking and combination in the Bayesian workflow, and probabilistic perspectives on Deep Learning.
         </p>
         <p>
-        For a framework of analysis, I usually follow the Box's Loop described in detail in <a href="http://www.cs.columbia.edu/~blei/papers/Blei2014b.pdf">Blei (2014)</a>. The graph below outlines the Box's Loop (comes from the same article).
+        For a framework of analysis, I usually follow the Box's Loop described in detail in <a href="http://www.cs.columbia.edu/~blei/papers/Blei2014b.pdf">Blei (2014)</a>. The graph below outlines Box's Loop (comes from the same article).
         </p>
         <p>
         <img src="Images/Bayesian-workflow.png" width="85%">
@@ -146,7 +146,7 @@ width:80px;
           <strong>Liyi Zhang</strong>,
           <a href="http://www.cs.columbia.edu/~itsik/">Itsik Pe'er</a>,
         <br>
-        <em>Machine Learning in Computational Biology 2020 (MLCB). Oral Presentation. </em>  <br>
+        <em>Machine Learning in Computational Biology 2020 (MLCB). Oral Presentation. </em><a href="https://github.com/amoretti86/phylo">Code.</a><br>
         </p>
         <p>Bayesian phylogenetic inference is often conducted via local or sequential search algorithms such as random-walk Markov chain Monte Carlo or Combinatorial Sequential Monte Carlo. These methods sample tree topologies and branch lengths, however when MCMC is used to perform evolutionary parameter learning, convergence often requires long runs with inefficient state space exploration. We introduce Variational Combinatorial Sequential Monte Carlo (VCSMC), a novel Variational Inference method that simultaneously performs both parameter inference and model learning. Our method uses sequential search to construct a variational objective defined on the composite space of phylogenetic trees. We show that VCSMC is computationally efficient and explores higher probability spaces when compared with state-of-the-art Hamiltonian Monte Carlo methods. </p>
       </td>
@@ -174,7 +174,7 @@ width:80px;
             <papertitle>Model Stacking in Bayesian Phylogenetic Inference</papertitle>
         </a>
         <br>
-        <em>Columbia Statistics - Undergraduate Internship. Work in Progress. </em>  <br>
+        <em>Columbia Statistics - Undergraduate Internship. Work in Progress. </em> <br>
         </p>
         <p>I'm working with Professor Andrew Gelman to develop MCMC method in R and Stan to enable sampling in discrete spaces in phylogenetic models by isolating discrete models and using stacking of predictive distributions for model combination. Here, I'm still in the process of diagnosing MCMC inference and exploring properties of stacking as a method of model averaging.</p>
       </td>
@@ -192,7 +192,7 @@ width:80px;
             <papertitle>Stochastic Variance Reduction for Nonconvex Optimization</papertitle>
         </a>
         <br>
-        <em>COMS 4995 Optimization Methods in Machine Learning - In-Class Group Project </em>  <br>
+        <em>COMS 4995 Optimization Methods in Machine Learning - In-Class Group Project. </em><a href="https://github.com/ryandgoldenberg1/svrg_project">Code.</a><br><br>
         </p>
         <p>Stochastic Variance Reduced Gradient (SVRG) is one of the popular method proposed to reduce the variance of gradient in the optimization. In this project, we evaluate its result on nonconvex optimization. We study the method without the convex assumption and try to reproduce previous experiment results to verify their claims. However, we can only partially reproduce their result and the advantage against SGD no longer holds when we use deeper network.</p>
       </td>
@@ -208,11 +208,10 @@ width:80px;
         <p>
         <a href="Writings/gibbs_sampler.pdf">
             <papertitle>Text Clustering with the Gibbs Sampler</papertitle>
-        </a>
-        <br>
-        <em>STCS 6701 Foundations of Graphical Models - In-Class Individual Assignment</em>  <br>
+        </a><br>
+        <em>STCS 6701 Foundations of Graphical Models - In-Class Individual Assignment. </em><a href="https://github.com/zhang-liyi/gibbs-sampler/blob/master/gibbs_sampler.R">Code.</a><br>
         </p>
-        <p>I did a from-scratch implementation of a Gibbs Sampler with its <a href="https://github.com/zhang-liyi/gibbs-sampler/blob/master/gibbs_sampler.R"> code linked</a>, and explored its properties. It clusters text data using 2000+ articles from the AP dataset with the Poisson mixture model, generating meaningful topics using TFIDF-inspired term-score.</p>
+        <p>I did a from-scratch implementation of a Gibbs Sampler and explored its properties. It clusters text data using 2000+ articles from the AP dataset with the Poisson mixture model, generating meaningful topics using TFIDF-inspired term-score. </p>
       </td>
     </tr>
     </table>
