--- a/index.html
+++ b/index.html
@@ -117,11 +117,11 @@ width:80px;
         <p>
         <img src="Images/Bayesian-workflow.png" width="85%">
         </p>
-        <p> &nbsp </p>
         </td> 
         </tr>
       </table>
  
+    <br>
 
     <table width="100%" align="center" border="0" cellspacing="0" cellpadding="20">
       <tr>
@@ -153,7 +153,7 @@ width:80px;
     </tr>
     </table>
 
-
+    <br>
 
     <table width="100%" align="center" border="0" cellspacing="0" cellpadding="20">
       <tr>
@@ -192,7 +192,7 @@ width:80px;
             <papertitle>Stochastic Variance Reduction for Nonconvex Optimization</papertitle>
         </a>
         <br>
-        <em>COMS 4995 Optimization Methods in Machine Learning - In-Class Group Project. </em><a href="https://github.com/ryandgoldenberg1/svrg_project">Code.</a><br><br>
+        <em>COMS 4995 Optimization Methods in Machine Learning - In-Class Group Project. </em><a href="https://github.com/ryandgoldenberg1/svrg_project">Code.</a><br>
         </p>
         <p>Stochastic Variance Reduced Gradient (SVRG) is one of the popular method proposed to reduce the variance of gradient in the optimization. In this project, we evaluate its result on nonconvex optimization. We study the method without the convex assumption and try to reproduce previous experiment results to verify their claims. However, we can only partially reproduce their result and the advantage against SGD no longer holds when we use deeper network.</p>
       </td>
