--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@ width:80px;
 </style>
 
 
-  <title>Liyi Zhang </title>
+  <title>Liyi Zhang's Page </title>
   <meta http-equiv="Content-Type" content="text/html; charset=us-ascii">
   <p> &nbsp </p>
   <link href='http://fonts.googleapis.com/css?family=Roboto:300,400,500,700,900,100italic,100,300,300italic,400italic,500italic,900italic,700italic' rel='stylesheet' type='text/css'>
