--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@ width:80px;
         I'm doing undergraduate degree at Columbia University, Columbia College, expecting to graduate in Spring 2021. I'm majoring in Statistics and Applied Mathematics. My research interest lies in the general area of probabilistic Machine Learning. They include approximate Bayesian inference, model checking and combination in the Bayesian workflow, and probabilistic perspectives on Deep Learning.
         </p>
         <p>
-        For a framework of analysis, I use "the Box's Loop", where one follows iterative stages: define a model -> use data to infer hidden quantities -> apply, criticize, and modify the model; and repeat. I work on a diverse range of data, so long as they challenge me to think more deeply about statistical methods. Recently, I have a few works on phylogenetic data.
+        For a framework of research, I use "the Box's Loop", where one follows iterative stages: define a model -> use data to infer hidden quantities -> apply, criticize, and modify the model; and repeat. I work on a diverse range of data, so long as they challenge me to think more deeply about statistical methods. Recently, I have a few works on phylogenetic data.
         </p>
         </td> 
         </tr>
