--- a/index.html
+++ b/index.html
@@ -171,7 +171,7 @@ width:80px;
         <br>
         <em>Columbia Statistics - Undergraduate Internship. Work in Progress. </em> <br>
         </p>
-        <p>I'm working with Professor Andrew Gelman to develop MCMC method in R and Stan to enable sampling in discrete spaces in phylogenetic models by isolating discrete models and using stacking of predictive distributions for model combination. Here, I'm still in the process of diagnosing MCMC inference and exploring properties of stacking as a method of model averaging.</p>
+        <p>I'm working with Professor Andrew Gelman to develop MCMC method in R and Stan to sample in discrete spaces in phylogenetic models by isolating discrete models and using stacking of predictive distributions for model combination. Here, I'm still in the process of diagnosing MCMC inference and exploring properties of stacking as a method of model averaging.</p>
       </td>
     </tr>
     </table>
