--- a/index.html
+++ b/index.html
@@ -93,12 +93,12 @@ width:80px;
           <name>Liyi Zhang</name>
         </p>
         <p>
-        <img src="zhang-liyi.jpg" width="35%">
+        <img src="zhang-liyi.jpg" width="30%">
         </p>
         <p>
-          <a href="Zhang_Liyi_Resume.pdf">Resume</a> &nbsp/&nbsp
-          <a href="https://www.linkedin.com/in/liyi-zhang-1b5041139/"> LinkedIn </a> &nbsp/&nbsp
-        <a> Email:</a>  lz2574 at columbia dot edu 
+          <a href="Zhang_Liyi_Resume.pdf">Resume</a> | 
+          <a href="https://www.linkedin.com/in/liyi-zhang-1b5041139/"> LinkedIn </a> | 
+          <a> Email:</a>  lz2574 at columbia dot edu 
         </p>
         </td>
        </tr>
