--- a/index.html
+++ b/index.html
@@ -154,7 +154,7 @@ width:80px;
     <table width="100%" align="center" border="0" cellspacing="0" cellpadding="20">
       <tr>
         <td width="100%" valign="middle">
-          <heading>Projects</heading>
+          <heading>Selected Projects</heading>
         </td>
       </tr>
     </table>
