--- a/index.html
+++ b/index.html
@@ -174,6 +174,23 @@ width:80px;
       </td>
     </tr>
     </table>
+    
+    <table width="100%" align="center" border="0" cellspacing="0" cellpadding="25">
+    <tr>
+      <td width="25%">
+        <img src='Images/topics.png' width="280" height="250">
+      </td>
+      <td valign="top" width="75%">
+        <p>
+        <a href="Writings/BNN-robustness.pdf">
+            <papertitle>Improving Neural Network Robustness with Bayesian Weight Sampling</papertitle>
+        </a><br>
+        <em>STCS 6701 Foundations of Graphical Models - In-Class Final Project. </em><a href="https://github.com/zhang-liyi/gibbs-sampler/blob/master/gibbs_sampler.R">Code.</a><br>
+        </p>
+        <p>Deep neural networks are the state-of-the-art for various tasks and benchmarks, but they are often not robust to slight or even negligible input perturbations. On image classification tasks, for example, models with near-perfect accuracy can easily degrade to near-zero accuracy when the input images change by a tiny amount that is invisible to human. We propose to improve models’ robustness to input perturbations by adding diversity in model weights during training with Bayesian neural networks. Our experiments on an image classification benchmark shows that Bayesian neural networks are more robust than non-Bayesian deep neural networks trained with norm-based regularization. We claim that introducing diversity of model weights during model training improves model’s robustness to input perturbations. </p>
+      </td>
+    </tr>
+    </table>
 
     <table width="100%" align="center" border="0" cellspacing="0" cellpadding="25">
     <tr>
@@ -193,22 +210,6 @@ width:80px;
     </tr>
     </table>
 
-    <table width="100%" align="center" border="0" cellspacing="0" cellpadding="25">
-    <tr>
-      <td width="25%">
-        <img src='Images/topics.png' width="280" height="250">
-      </td>
-      <td valign="top" width="75%">
-        <p>
-        <a href="Writings/gibbs_sampler.pdf">
-            <papertitle>Text Clustering with the Gibbs Sampler</papertitle>
-        </a><br>
-        <em>STCS 6701 Foundations of Graphical Models - In-Class Individual Assignment. </em><a href="https://github.com/zhang-liyi/gibbs-sampler/blob/master/gibbs_sampler.R">Code.</a><br>
-        </p>
-        <p>I did a from-scratch implementation of a Gibbs Sampler and explored its properties. It clusters text data using 2000+ articles from the AP dataset with the Poisson mixture model, generating meaningful topics using TFIDF-inspired term-score. </p>
-      </td>
-    </tr>
-    </table>
 
     <table width="100%" align="center" border="0" cellspacing="0" cellpadding="25">
     <tr>
