--- a/index.html
+++ b/index.html
@@ -170,7 +170,7 @@ width:80px;
         <br>
         <em>Columbia Statistics - Undergraduate Internship. Work in Progress. </em> <br>
         </p>
-        <p>I'm working with Professor Andrew Gelman to develop MCMC method in R and Stan to sample in discrete spaces in phylogenetic models by isolating discrete models and using stacking of predictive distributions for model combination. Here, I'm still in the process of diagnosing MCMC inference and exploring properties of stacking as a method of model averaging.</p>
+        <p>I'm working with Professor Andrew Gelman to develop MCMC method in R and Stan to sample in discrete spaces in phylogenetic models by isolating discrete models and using stacking of predictive distributions for model combination. I'm in the process of diagnosing MCMC inference and exploring properties of stacking as a method of model averaging, with preliminary results supporting the hypothesis that stacking tends less to produce spuriously high model posteriors than Bayesian Model Averaging.</p>
       </td>
     </tr>
     </table>
@@ -178,7 +178,7 @@ width:80px;
     <table width="100%" align="center" border="0" cellspacing="0" cellpadding="25">
     <tr>
       <td width="25%">
-        <img src='Images/topics.png' width="280" height="250">
+        <img src='Images/bnn_algo.png' width="280" height="250">
       </td>
       <td valign="top" width="75%">
         <p>
