--- a/index.html
+++ b/index.html
@@ -185,7 +185,7 @@ width:80px;
         <a href="Writings/BNN-robustness.pdf">
             <papertitle>Improving Neural Network Robustness with Bayesian Weight Sampling</papertitle>
         </a><br>
-        <em>STCS 6701 Foundations of Graphical Models - In-Class Final Project. </em><a href="https://github.com/zhang-liyi/bnn-robustness">Code.</a><br>
+        <em>STCS 6701 Foundations of Graphical Models - Final Project. </em><a href="https://github.com/zhang-liyi/bnn-robustness">Code.</a><br>
         </p>
         <p>Deep neural networks are the state-of-the-art for various tasks and benchmarks, but they are often not robust to slight or even negligible input perturbations. On image classification tasks, for example, models with near-perfect accuracy can easily degrade to near-zero accuracy when the input images change by a tiny amount that is invisible to human. We propose to improve models’ robustness to input perturbations by adding diversity in model weights during training with Bayesian neural networks. Our experiments on an image classification benchmark shows that Bayesian neural networks are more robust than non-Bayesian deep neural networks trained with norm-based regularization. We claim that introducing diversity of model weights during model training improves model’s robustness to input perturbations. </p>
       </td>
@@ -203,7 +203,7 @@ width:80px;
             <papertitle>Stochastic Variance Reduction for Nonconvex Optimization</papertitle>
         </a>
         <br>
-        <em>COMS 4995 Optimization Methods in Machine Learning - In-Class Group Project. </em><a href="https://github.com/ryandgoldenberg1/svrg_project">Code.</a><br>
+        <em>COMS 4995 Optimization Methods in Machine Learning - Final Project. </em><a href="https://github.com/ryandgoldenberg1/svrg_project">Code.</a><br>
         </p>
         <p>Stochastic Variance Reduced Gradient (SVRG) is one of the popular method proposed to reduce the variance of gradient in the optimization. In this project, we evaluate its result on nonconvex optimization. We study the method without the convex assumption and try to reproduce previous experiment results to verify their claims. However, we can only partially reproduce their result and the advantage against SGD no longer holds when we use deeper network.</p>
       </td>
