--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@ width:80px;
         <p>
           <a href="Zhang_Liyi_Resume.pdf">Resume</a> | 
           <a href="https://www.linkedin.com/in/liyi-zhang-1b5041139/"> LinkedIn</a> | 
-          <a> Email:</a>  lz2574 at columbia dot edu 
+          <a> Email:</a>  lz2574@columbia.edu 
         </p>
         </td>
        </tr>
