--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@ width:80px;
         <tr>
         <td width="100%" valign="middle">
         <p>
-        I'm doing undergraduate degree at Columbia University, Columbia College' 2021. I'm majoring in Statistics and Applied Mathematics. My research interest lies in the general area of probabilistic Machine Learning. They include approximate Bayesian inference and probabilistic perspectives on Deep Learning. I'm also interested in model checking and combination of the Bayesian workflow.
+        I'm doing undergraduate degree at Columbia University, Columbia College' 2021. I'm majoring in Statistics and Applied Mathematics. My research interest lies in the general area of probabilistic Machine Learning. They include the intersection between Deep Learning and probabilistic modeling, and approximate Bayesian inference. I'm also interested in model checking and combination of the Bayesian workflow.
         </p>
         <p>
         Most of the times, I follow the iterative process of probabilistic modeling: define a model -> use data to infer hidden quantities -> apply, criticize, and modify the model; and repeat. I work on a diverse range of data, so long as they challenge me to think more deeply about statistical methods. Recently, I have a few works on phylogenetic data.
