--- a/index.html
+++ b/index.html
@@ -178,7 +178,7 @@ width:80px;
     <table width="100%" align="center" border="0" cellspacing="0" cellpadding="25">
     <tr>
       <td width="25%">
-        <img src='Images/bnn-algo.png' width="280" height="220">
+        <img src='Images/bnn-chart.png' width="280" height="220">
       </td>
       <td valign="top" width="75%">
         <p>
