--- a/index.html
+++ b/index.html
@@ -170,7 +170,7 @@ width:80px;
         <br>
         <em>Columbia Statistics - Undergraduate Internship. Work in Progress. </em> <br>
         </p>
-        <p>I'm working with Professor Andrew Gelman to develop MCMC method in R and Stan to sample in discrete spaces in phylogenetic models by isolating discrete models and using stacking of predictive distributions for model combination. I'm in the process of diagnosing MCMC inference and exploring properties of stacking as a method of model averaging, with preliminary results supporting the hypothesis that stacking tends less to produce spuriously high model posteriors than Bayesian Model Averaging.</p>
+        <p>I'm working with Professor Andrew Gelman to develop stacking algorithm for phylogenetic inference by isolating discrete models, using MCMC-based methods in Stan for sampling on continuous parameters, and adopting stacking for model combination. I'm in the process of diagnosing MCMC inference and exploring properties of stacking as a method of model averaging, with preliminary results supporting the hypothesis that stacking tends less to produce spuriously high model posteriors than Bayesian Model Averaging.</p>
       </td>
     </tr>
     </table>
