--- a/index.html
+++ b/index.html
@@ -166,9 +166,9 @@ width:80px;
         <p>
         <papertitle>Model Stacking in Bayesian Phylogenetic Inference</papertitle>
         <br>
-        <em>Columbia Statistics - Undergraduate Internship. Work in Progress. </em> <br>
+        <em>Columbia Statistics Undergraduate Research Internship - <a href="http://www.stat.columbia.edu/~gelman/">Andrew Gelman</a>, </em> <br>
         </p>
-        <p>I'm working with Professor Andrew Gelman to develop stacking algorithm for phylogenetic inference by isolating discrete models, using MCMC-based methods in Stan for sampling on continuous parameters, and adopting stacking for model combination. I'm in the process of diagnosing MCMC inference and exploring properties of stacking as a method of model averaging, with preliminary results supporting the hypothesis that stacking tends less to produce spuriously high model posteriors than Bayesian Model Averaging.</p>
+        <p>We develop stacking algorithm for phylogenetic inference by isolating discrete models, using MCMC-based methods in Stan for sampling on continuous parameters, and adopting stacking for model combination. Preliminary results support the hypothesis that stacking tends less to produce spuriously high model posteriors than Bayesian Model Averaging.</p>
       </td>
     </tr>
     </table>
