--- a/index.html
+++ b/index.html
@@ -1,7 +1,6 @@
 <html>
 <head>
 
-
 <style type="text/css">
 * {
   margin: 5 px;
@@ -116,6 +115,7 @@ width:80px;
       </table>
  
     <br>
+      google-site-verification=CcWDGVnWpxKIlNK1shuQfNdNdj-atJncaYygDirmABk
 
     <table width="100%" align="center" border="0" cellspacing="0" cellpadding="20">
       <tr>
