--- a/index.html
+++ b/index.html
@@ -2,7 +2,9 @@
 <head>
   
 <meta name="google-site-verification" content="5XZwYIvqm1A6qR1WOXZFwXynmIvynWzV70s0sRD3yKg" />
-
+<meta charset="UTF-8">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+  
 <style type="text/css">
 * {
   margin: 5 px;
