--- a/index.html
+++ b/index.html
@@ -135,18 +135,21 @@ width:80px;
       </td>
       <td valign="top" width="75%">
         <p>
-        <a href="Writings/VCSMC-MLCB.pdf">
-            <papertitle>Variational Combinatorial Sequential Monte Carlo in Bayesian Phylogenetic Inference</papertitle>
+        <a href="https://arxiv.org/pdf/2106.00075.pdf">
+            <papertitle>Variational Combinatorial Sequential Monte Carlo Methods in Bayesian Phylogenetic Inference</papertitle>
         </a>
         <br>
-          <a href=http://www.cs.columbia.edu/~amoretti/>Antonio K. Moretti</a>,
-          <strong>Liyi Zhang</strong>,
+          <a href=http://www.cs.columbia.edu/~amoretti/>Antonio K. Moretti*</a>,
+          <strong>Liyi Zhang*</strong>,
+          <a href=https://naesseth.github.io/>Christian A. Naesseth</a>,
+          Hadiah Venner,
+          <a href="http://www.cs.columbia.edu/~blei/">David M. Blei</a>,
           <a href="http://www.cs.columbia.edu/~itsik/">Itsik Pe'er</a>,
         <br>
-        <em>Machine Learning in Computational Biology 2020 (MLCB). Oral Presentation. </em><a href="https://github.com/amoretti86/phylo">Code.</a><br>
+        To appear in <em>Uncertainty in Artificial Intelligence 2021 (UAI). </em><a href="https://github.com/amoretti86/phylo">Code.</a><br>
         </p>
-        <p>Bayesian phylogenetic inference is often conducted via local or sequential search algorithms such as random-walk Markov chain Monte Carlo or Combinatorial Sequential Monte Carlo. These methods sample tree topologies and branch lengths, however when MCMC is used to perform evolutionary parameter learning, convergence often requires long runs with inefficient state space exploration. We introduce Variational Combinatorial Sequential Monte Carlo (VCSMC), a novel Variational Inference method that simultaneously performs both parameter inference and model learning. Our method uses sequential search to construct a variational objective defined on the composite space of phylogenetic trees. We show that VCSMC is computationally efficient and explores higher probability spaces when compared with state-of-the-art Hamiltonian Monte Carlo methods. </p>
-      </td>
+        <p>Bayesian phylogenetic inference is often conducted via local or sequential search over topologies and branch lengths using algorithms such as random-walk Markov chain Monte Carlo (MCMC) or Combinatorial Sequential Monte Carlo (CSMC). However, when MCMC is used for evolutionary parameter learning, convergence requires long runs with inefficient exploration of the state space. We introduce Variational Combinatorial Sequential Monte Carlo (VCSMC), a powerful framework that establishes variational sequential search to learn distributions over intricate combinatorial structures. We then develop nested CSMC, an efficient proposal distribution for CSMC and prove that nested CSMC is an exact approximation to the (intractable) locally optimal proposal. We use nested CSMC to define a second objective, VNCSMC which yields tighter lower bounds than VCSMC. We show that VCSMC and VNCSMC are computationally efficient and explore higher probability spaces than existing methods on a range of tasks.
+    </td>
     </tr>
     </table>
 
