--- a/index.html
+++ b/index.html
@@ -97,7 +97,6 @@ width:80px;
         <img src="zhang-liyi.jpg" width="30%">
         </p>
         <p>
-          <a href="Zhang_Liyi_Resume.pdf">Resume</a> | 
           <a href="https://www.linkedin.com/in/liyi-zhang-1b5041139/"> LinkedIn</a> | 
           <a> Email:</a>  lz2574@columbia.edu 
         </p>
@@ -131,7 +130,7 @@ width:80px;
     <table width="100%" align="center" border="0" cellspacing="0" cellpadding="25">
     <tr>
       <td width="25%">
-        <img src='Images/vcsmc-loglik.png' width="280" height="230">
+        <img src='Images/vcsmc.png' width="280" height="230">
       </td>
       <td valign="top" width="75%">
         <p>
