--- a/index.html
+++ b/index.html
@@ -1,7 +1,6 @@
 <html>
 <head>
   
-<meta name="google-site-verification" content="5XZwYIvqm1A6qR1WOXZFwXynmIvynWzV70s0sRD3yKg" />
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
   
@@ -97,6 +96,7 @@ width:80px;
         <img src="zhang-liyi.jpg" width="30%">
         </p>
         <p>
+          <a href="https://github.com/zhang-liyi"> GitHub</a> | 
           <a href="https://www.linkedin.com/in/liyi-zhang-1b5041139/"> LinkedIn</a> | 
           <a> Email:</a>  lz2574@columbia.edu 
         </p>
