--- a/index.html
+++ b/index.html
@@ -173,7 +173,7 @@ width:80px;
       <td valign="top" width="75%">
         <p>
         <a href="Writings/VCSMC-MLCB.pdf">
-            <papertitle>Variational Combinatorial Sequential Monte Carlo Methods in Bayesian Phylogenetic Inference</papertitle>
+            <papertitle>Variational Combinatorial Sequential Monte Carlo in Bayesian Phylogenetic Inference</papertitle>
         </a>
         <br>
           <a href=http://www.cs.columbia.edu/~amoretti/>Antonio K. Moretti</a>,
