--- a/index.html
+++ b/index.html
@@ -110,10 +110,10 @@ width:80px;
         <tr>
         <td width="100%" valign="middle">
         <p>
-        I will do Data Science Masters at Columbia University starting September 2021. In May 2021, I graduated from Columbia University, Columbia College with majors in Statistics and Applied Mathematics. My academic interest lies in the general area of probabilistic Machine Learning. They include the intersection between Deep Learning and probabilistic modeling, and approximate Bayesian inference. I'm also interested in model combination methods.
+        I will do Data Science Masters at Columbia University starting September 2021. I graduated from Columbia University, Columbia College with majors in Statistics and Applied Mathematics in May 2021. My academic interest lies in the general area of probabilistic Machine Learning. They include the intersection between Deep Learning and probabilistic modeling, and approximate Bayesian inference. I am also interested in model combination methods.
         </p>
         <p>
-        Most of the times, I follow the iterative process of probabilistic modeling: define a model -> use data to infer hidden quantities -> apply, criticize, and modify the model; and repeat. I work on a diverse range of data, so long as they challenge me to think more deeply about statistical methods. Recently, I have a few works on phylogenetic data.
+        I am curious about properties behind model predictions, including uncertainty representation and robustness. I am working on addressing these questions through probabilistic modeling, improving inference methods, and exploring their applications.
         </p>
         </td> 
         </tr>
