--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@ width:80px;
         <tr>
         <td width="100%" valign="middle">
         <p>
-        I will do Data Science Masters at Columbia University starting September 2021. I graduated from Columbia University, Columbia College with majors in Statistics and Applied Mathematics in May 2021. My academic interest lies in the general area of probabilistic Machine Learning. They include the intersection between Deep Learning and probabilistic modeling, and approximate Bayesian inference. I am also interested in model combination methods.
+        I will do Data Science Masters at Columbia University in September 2021. I graduated from Columbia University, Columbia College in May 2021 with majors in Statistics and Applied Mathematics. My academic interest lies in the general area of probabilistic Machine Learning. They include the intersection between Deep Learning and probabilistic modeling, and approximate Bayesian inference. I am also interested in model combination methods.
         </p>
         <p>
         I am curious about properties behind model predictions, including uncertainty representation and robustness. I am working on addressing these questions through probabilistic modeling, improving inference methods, and exploring their applications.
